# Algolizer

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/: Algolizer_Proposal.docx  Algolizer_Report.docx
src/: a.out  array.cpp  array.h  binary_search.cpp  binary_search.h  bub.cpp  bubble_sort.cpp  bubble_sort.h  graph.cpp  graph.h  graph.hpp  insertion_sort.cpp  insertion_sort.h  linear_search.cpp  linear_search.h  linked_list.cpp  linked_list.hpp  main.c  main.cpp  main.h  merge_sort.cpp  merge_sort.hpp  queue.cpp  queue.h  quick_sort.cpp  quick_sort.hpp  sel.cpp  selection_sort.cpp  selection_sort.h  stack.cpp  stack.h  tree.cpp  tree.hpp
src/utils/: InputBox.cpp  InputBox.h
